kubernetes/04-network/inventario-db-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: inventario-db-allow-from-frontend
  namespace: inventario
spec:
  podSelector:
    matchLabels:
      app: inventario-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: inventario-web
      ports:
        - protocol: TCP
          port: 27017
